curses.h

typedef struct screen  SCREEN;
typedef struct _win_st WINDOW;
typedef	chtype	attr_t;		
struct _win_st
{
	NCURSES_SIZE_T _cury, _curx; 
	NCURSES_SIZE_T _maxy, _maxx; 
	NCURSES_SIZE_T _begy, _begx; 
	short   _flags;		
	attr_t  _attrs;		
	chtype  _bkgd;		
	bool	_notimeout;	
	bool	_clear;		
	bool	_leaveok;	
	bool	_scroll;	
	bool	_idlok;		
	bool	_idcok;		
	bool	_immed;		
	bool	_sync;		
	bool	_use_keypad;	
	int	_delay;		
	struct ldat *_line;	
	NCURSES_SIZE_T _regtop;	
	NCURSES_SIZE_T _regbottom; 
	int	_parx;		
	int	_pary;		
	WINDOW	*_parent;	
	struct pdat
	{
	    NCURSES_SIZE_T _pad_y,      _pad_x;
	    NCURSES_SIZE_T _pad_top,    _pad_left;
	    NCURSES_SIZE_T _pad_bottom, _pad_right;
	} _pad;
	NCURSES_SIZE_T _yoffset; 
#if NCURSES_WIDECHAR
	cchar_t  _bkgrnd;	
#if 1
	int	_color;		
#endif
#endif
};
extern NCURSES_EXPORT(int) cbreak (void);				
extern NCURSES_EXPORT(int) delch (void);				
extern NCURSES_EXPORT(void) delscreen (SCREEN *);			
extern NCURSES_EXPORT(int) deleteln (void);				
extern NCURSES_EXPORT(int) echo (void);					
extern NCURSES_EXPORT(int) endwin (void);				
extern NCURSES_EXPORT(int) getch (void);				
extern NCURSES_EXPORT(int) getnstr (char *, int);			
extern NCURSES_EXPORT(int) getstr (char *);				
extern NCURSES_EXPORT(int) halfdelay (int);				
extern NCURSES_EXPORT(chtype) inch (void);				
extern NCURSES_EXPORT(int) inchnstr (chtype *, int);			
extern NCURSES_EXPORT(int) inchstr (chtype *);				
extern NCURSES_EXPORT(WINDOW *) initscr (void);				
extern NCURSES_EXPORT(int) innstr (char *, int);			
extern NCURSES_EXPORT(int) insch (chtype);				
extern NCURSES_EXPORT(int) insdelln (int);				
extern NCURSES_EXPORT(int) insertln (void);				
extern NCURSES_EXPORT(int) insnstr (const char *, int);			
extern NCURSES_EXPORT(int) insstr (const char *);			
extern NCURSES_EXPORT(int) instr (char *);				
extern NCURSES_EXPORT(int) intrflush (WINDOW *,bool);			
extern NCURSES_EXPORT(bool) isendwin (void);				
extern NCURSES_EXPORT(int) keypad (WINDOW *,bool);			
extern NCURSES_EXPORT(int) meta (WINDOW *,bool);			
extern NCURSES_EXPORT(int) mvdelch (int, int);				
extern NCURSES_EXPORT(int) mvgetch (int, int);				
extern NCURSES_EXPORT(int) mvgetnstr (int, int, char *, int);		
extern NCURSES_EXPORT(int) mvgetstr (int, int, char *);			
extern NCURSES_EXPORT(chtype) mvinch (int, int);			
extern NCURSES_EXPORT(int) mvinchnstr (int, int, chtype *, int);	
extern NCURSES_EXPORT(int) mvinchstr (int, int, chtype *);		
extern NCURSES_EXPORT(int) mvinnstr (int, int, char *, int);		
extern NCURSES_EXPORT(int) mvinsch (int, int, chtype);			
extern NCURSES_EXPORT(int) mvinsnstr (int, int, const char *, int);	
extern NCURSES_EXPORT(int) mvinsstr (int, int, const char *);		
extern NCURSES_EXPORT(int) mvinstr (int, int, char *);			
extern NCURSES_EXPORT(int) mvwdelch (WINDOW *, int, int);		
extern NCURSES_EXPORT(int) mvwgetch (WINDOW *, int, int);		
extern NCURSES_EXPORT(int) mvwgetnstr (WINDOW *, int, int, char *, int);	
extern NCURSES_EXPORT(int) mvwgetstr (WINDOW *, int, int, char *);	
extern NCURSES_EXPORT(chtype) mvwinch (WINDOW *, int, int);			
extern NCURSES_EXPORT(int) mvwinchnstr (WINDOW *, int, int, chtype *, int);	
extern NCURSES_EXPORT(int) mvwinchstr (WINDOW *, int, int, chtype *);		
extern NCURSES_EXPORT(int) mvwinnstr (WINDOW *, int, int, char *, int);		
extern NCURSES_EXPORT(int) mvwinsch (WINDOW *, int, int, chtype);		
extern NCURSES_EXPORT(int) mvwinsnstr (WINDOW *, int, int, const char *, int);	
extern NCURSES_EXPORT(int) mvwinsstr (WINDOW *, int, int, const char *);	
extern NCURSES_EXPORT(int) mvwinstr (WINDOW *, int, int, char *);		
extern NCURSES_EXPORT(SCREEN *) newterm (const char *,FILE *,FILE *);	
extern NCURSES_EXPORT(int) nocbreak (void);				
extern NCURSES_EXPORT(int) nodelay (WINDOW *,bool);			
extern NCURSES_EXPORT(int) noecho (void);				
extern NCURSES_EXPORT(void) noqiflush (void);				
extern NCURSES_EXPORT(int) noraw (void);				
extern NCURSES_EXPORT(int) notimeout (WINDOW *,bool);			
extern NCURSES_EXPORT(void) qiflush (void);				
extern NCURSES_EXPORT(int) raw (void);					
extern NCURSES_EXPORT(int) ripoffline (int, int (*)(WINDOW *, int));	
extern NCURSES_EXPORT(SCREEN *) set_term (SCREEN *);			
extern NCURSES_EXPORT(void) timeout (int);				
extern NCURSES_EXPORT(int) typeahead (int);				
extern NCURSES_EXPORT(int) ungetch (int);				
extern NCURSES_EXPORT(int) wdelch (WINDOW *);				
extern NCURSES_EXPORT(int) wdeleteln (WINDOW *);			
extern NCURSES_EXPORT(int) wgetch (WINDOW *);				
extern NCURSES_EXPORT(int) wgetnstr (WINDOW *,char *,int);		
extern NCURSES_EXPORT(int) wgetstr (WINDOW *, char *);			
extern NCURSES_EXPORT(chtype) winch (WINDOW *);				
extern NCURSES_EXPORT(int) winchnstr (WINDOW *, chtype *, int);		
extern NCURSES_EXPORT(int) winchstr (WINDOW *, chtype *);		
extern NCURSES_EXPORT(int) winnstr (WINDOW *, char *, int);		
extern NCURSES_EXPORT(int) winsch (WINDOW *, chtype);			
extern NCURSES_EXPORT(int) winsdelln (WINDOW *,int);			
extern NCURSES_EXPORT(int) winsertln (WINDOW *);			
extern NCURSES_EXPORT(int) winsnstr (WINDOW *, const char *,int);	
extern NCURSES_EXPORT(int) winsstr (WINDOW *, const char *);		
extern NCURSES_EXPORT(int) winstr (WINDOW *, char *);			
extern NCURSES_EXPORT(void) wtimeout (WINDOW *,int);			
extern NCURSES_EXPORT(const char *) curses_version (void);
extern NCURSES_EXPORT(int) assume_default_colors (int, int);
extern NCURSES_EXPORT(int) define_key (const char *, int);
extern NCURSES_EXPORT(int) use_default_colors (void);
extern NCURSES_EXPORT(int) use_extended_names (bool);
#define curses_version() NCURSES_VERSION
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(cbreak) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(echo) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(endwin) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(halfdelay) (SCREEN*, int); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(intrflush) (SCREEN*, WINDOW*, bool);	
extern NCURSES_EXPORT(bool) NCURSES_SP_NAME(isendwin) (SCREEN*); 
extern NCURSES_EXPORT(SCREEN *) NCURSES_SP_NAME(newterm) (SCREEN*, const char *, FILE *, FILE *); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(nocbreak) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(noecho) (SCREEN*); 
extern NCURSES_EXPORT(void) NCURSES_SP_NAME(noqiflush) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(noraw) (SCREEN*); 
extern NCURSES_EXPORT(void) NCURSES_SP_NAME(qiflush) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(raw) (SCREEN*); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(typeahead) (SCREEN*, int); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(ungetch) (SCREEN*, int); 
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(assume_default_colors) (SCREEN*, int, int);	
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(define_key) (SCREEN*, const char *, int);	
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(use_default_colors) (SCREEN*);	
#define getyx(win,y,x)		(y = getcury(win), x = getcurx(win))
#define getbegyx(win,y,x)	(y = getbegy(win), x = getbegx(win))
#define getmaxyx(win,y,x)	(y = getmaxy(win), x = getmaxx(win))
#define getparyx(win,y,x)	(y = getpary(win), x = getparx(win))
#define wgetstr(w, s)		wgetnstr(w, s, -1)
#define getnstr(s, n)		wgetnstr(stdscr, s, (n))
#define winstr(w, s)		winnstr(w, s, -1)
#define winchstr(w, s)		winchnstr(w, s, -1)
#define winsstr(w, s)		winsnstr(w, s, -1)
#define delch()			wdelch(stdscr)
#define deleteln()		winsdelln(stdscr,-1)
#define getch()			wgetch(stdscr)
#define getstr(str)		wgetstr(stdscr,(str))
#define inch()			winch(stdscr)
#define inchnstr(s,n)		winchnstr(stdscr,(s),(n))
#define inchstr(s)		winchstr(stdscr,(s))
#define innstr(s,n)		winnstr(stdscr,(s),(n))
#define insch(c)		winsch(stdscr,(c))
#define insdelln(n)		winsdelln(stdscr,(n))
#define insertln()		winsdelln(stdscr,1)
#define insnstr(s,n)		winsnstr(stdscr,(s),(n))
#define insstr(s)		winsstr(stdscr,(s))
#define instr(s)		winstr(stdscr,(s))
#define timeout(delay)		wtimeout(stdscr,(delay))
#define wdeleteln(win)		winsdelln(win,-1)
#define winsertln(win)		winsdelln(win,1)
#define mvwdelch(win,y,x)		(wmove((win),(y),(x)) == ERR ? ERR : wdelch(win))
#define mvwgetch(win,y,x)		(wmove((win),(y),(x)) == ERR ? ERR : wgetch(win))
#define mvwgetnstr(win,y,x,str,n)	(wmove((win),(y),(x)) == ERR ? ERR : wgetnstr((win),(str),(n)))
#define mvwgetstr(win,y,x,str)		(wmove((win),(y),(x)) == ERR ? ERR : wgetstr((win),(str)))
#define mvwinch(win,y,x)		(wmove((win),(y),(x)) == ERR ? NCURSES_CAST(chtype, ERR) : winch(win))
#define mvwinchnstr(win,y,x,s,n)	(wmove((win),(y),(x)) == ERR ? ERR : winchnstr((win),(s),(n)))
#define mvwinchstr(win,y,x,s)		(wmove((win),(y),(x)) == ERR ? ERR : winchstr((win),(s)))
#define mvwinnstr(win,y,x,s,n)		(wmove((win),(y),(x)) == ERR ? ERR : winnstr((win),(s),(n)))
#define mvwinsch(win,y,x,c)		(wmove((win),(y),(x)) == ERR ? ERR : winsch((win),(c)))
#define mvwinsnstr(win,y,x,s,n)		(wmove((win),(y),(x)) == ERR ? ERR : winsnstr((win),(s),(n)))
#define mvwinsstr(win,y,x,s)		(wmove((win),(y),(x)) == ERR ? ERR : winsstr((win),(s)))
#define mvwinstr(win,y,x,s)		(wmove((win),(y),(x)) == ERR ? ERR : winstr((win),(s)))
#define mvdelch(y,x)			mvwdelch(stdscr,(y),(x))
#define mvgetch(y,x)			mvwgetch(stdscr,(y),(x))
#define mvgetnstr(y,x,str,n)		mvwgetnstr(stdscr,(y),(x),(str),(n))
#define mvgetstr(y,x,str)		mvwgetstr(stdscr,(y),(x),(str))
#define mvinch(y,x)			mvwinch(stdscr,(y),(x))
#define mvinchnstr(y,x,s,n)		mvwinchnstr(stdscr,(y),(x),(s),(n))
#define mvinchstr(y,x,s)		mvwinchstr(stdscr,(y),(x),(s))
#define mvinnstr(y,x,s,n)		mvwinnstr(stdscr,(y),(x),(s),(n))
#define mvinsch(y,x,c)			mvwinsch(stdscr,(y),(x),(c))
#define mvinsnstr(y,x,s,n)		mvwinsnstr(stdscr,(y),(x),(s),(n))
#define mvinsstr(y,x,s)			mvwinsstr(stdscr,(y),(x),(s))
#define mvinstr(y,x,s)			mvwinstr(stdscr,(y),(x),(s))
extern NCURSES_EXPORT(int) get_wch (wint_t *);				
extern NCURSES_EXPORT(int) get_wstr (wint_t *);				
extern NCURSES_EXPORT(int) getcchar (const cchar_t *, wchar_t*, attr_t*, NCURSES_PAIRS_T*, void*);	
extern NCURSES_EXPORT(int) getn_wstr (wint_t *, int);			
extern NCURSES_EXPORT(int) in_wch (cchar_t *);				
extern NCURSES_EXPORT(int) ins_nwstr (const wchar_t *, int);		
extern NCURSES_EXPORT(int) ins_wch (const cchar_t *);			
extern NCURSES_EXPORT(int) ins_wstr (const wchar_t *);			
extern NCURSES_EXPORT(int) mvget_wch (int, int, wint_t *);		
extern NCURSES_EXPORT(int) mvget_wstr (int, int, wint_t *);		
extern NCURSES_EXPORT(int) mvgetn_wstr (int, int, wint_t *, int);	
extern NCURSES_EXPORT(int) mvin_wch (int, int, cchar_t *);		
extern NCURSES_EXPORT(int) mvins_nwstr (int, int, const wchar_t *, int);	
extern NCURSES_EXPORT(int) mvins_wch (int, int, const cchar_t *);	
extern NCURSES_EXPORT(int) mvins_wstr (int, int, const wchar_t *);	
extern NCURSES_EXPORT(int) mvwget_wch (WINDOW *, int, int, wint_t *);	
extern NCURSES_EXPORT(int) mvwget_wstr (WINDOW *, int, int, wint_t *);	
extern NCURSES_EXPORT(int) mvwgetn_wstr (WINDOW *, int, int, wint_t *, int);
extern NCURSES_EXPORT(int) mvwin_wch (WINDOW *, int, int, cchar_t *);	
extern NCURSES_EXPORT(int) mvwins_nwstr (WINDOW *, int,int, const wchar_t *,int); 
extern NCURSES_EXPORT(int) mvwins_wch (WINDOW *, int, int, const cchar_t *);	
extern NCURSES_EXPORT(int) mvwins_wstr (WINDOW *, int, int, const wchar_t *);	
extern NCURSES_EXPORT(int) setcchar (cchar_t *, const wchar_t *, const attr_t, NCURSES_PAIRS_T, const void *);	
extern NCURSES_EXPORT(int) unget_wch (const wchar_t);			
extern NCURSES_EXPORT(int) wget_wch (WINDOW *, wint_t *);		
extern NCURSES_EXPORT(int) wget_wstr (WINDOW *, wint_t *);		
extern NCURSES_EXPORT(int) wgetn_wstr (WINDOW *, wint_t *, int);	
extern NCURSES_EXPORT(int) win_wch (WINDOW *, cchar_t *);		
extern NCURSES_EXPORT(int) wins_nwstr (WINDOW *, const wchar_t *, int);	
extern NCURSES_EXPORT(int) wins_wch (WINDOW *, const cchar_t *);	
extern NCURSES_EXPORT(int) wins_wstr (WINDOW *, const wchar_t *);	
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(unget_wch) (SCREEN*, const wchar_t);	
#define get_wch(c)			wget_wch(stdscr,(c))
#define get_wstr(t)			wget_wstr(stdscr,(t))
#define getn_wstr(t,n)			wgetn_wstr(stdscr,(t),(n))
#define in_wch(c)			win_wch(stdscr,(c))
#define ins_nwstr(t,n)			wins_nwstr(stdscr,(t),(n))
#define ins_wch(c)			wins_wch(stdscr,(c))
#define ins_wstr(t)			wins_wstr(stdscr,(t))
#define wget_wstr(w,t)			wgetn_wstr((w),(t),-1)
#define wins_wstr(w,t)			wins_nwstr((w),(t),-1)
#define mvget_wch(y,x,c)		mvwget_wch(stdscr,(y),(x),(c))
#define mvget_wstr(y,x,t)		mvwget_wstr(stdscr,(y),(x),(t))
#define mvgetn_wstr(y,x,t,n)		mvwgetn_wstr(stdscr,(y),(x),(t),(n))
#define mvin_wch(y,x,c)			mvwin_wch(stdscr,(y),(x),(c))
#define mvins_nwstr(y,x,t,n)		mvwins_nwstr(stdscr,(y),(x),(t),(n))
#define mvins_wch(y,x,c)		mvwins_wch(stdscr,(y),(x),(c))
#define mvins_wstr(y,x,t)		mvwins_wstr(stdscr,(y),(x),(t))
#define mvwget_wch(win,y,x,c)		(wmove(win,(y),(x)) == ERR ? ERR : wget_wch((win),(c)))
#define mvwget_wstr(win,y,x,t)		(wmove(win,(y),(x)) == ERR ? ERR : wget_wstr((win),(t)))
#define mvwgetn_wstr(win,y,x,t,n)	(wmove(win,(y),(x)) == ERR ? ERR : wgetn_wstr((win),(t),(n)))
#define mvwin_wch(win,y,x,c)		(wmove(win,(y),(x)) == ERR ? ERR : win_wch((win),(c)))
#define mvwins_nwstr(win,y,x,t,n)	(wmove(win,(y),(x)) == ERR ? ERR : wins_nwstr((win),(t),(n)))
#define mvwins_wch(win,y,x,c)		(wmove(win,(y),(x)) == ERR ? ERR : wins_wch((win),(c)))
#define mvwins_wstr(win,y,x,t)		(wmove(win,(y),(x)) == ERR ? ERR : wins_wstr((win),(t)))
extern NCURSES_EXPORT(int) has_key (int);		
extern NCURSES_EXPORT(int) NCURSES_SP_NAME(has_key) (SCREEN*, int);    