src/merge.lisp


#define A_NORMAL	(1U - 1U)
#define A_ATTRIBUTES	NCURSES_BITS(~(1U - 1U),0)
#define A_CHARTEXT	(NCURSES_BITS(1U,0) - 1U)
#define A_COLOR		NCURSES_BITS(((1U) << 8) - 1U,0)
#define A_STANDOUT	NCURSES_BITS(1U,8)
#define A_UNDERLINE	NCURSES_BITS(1U,9)
#define A_REVERSE	NCURSES_BITS(1U,10)
#define A_BLINK		NCURSES_BITS(1U,11)
#define A_DIM		NCURSES_BITS(1U,12)
#define A_BOLD		NCURSES_BITS(1U,13)
#define A_ALTCHARSET	NCURSES_BITS(1U,14)
#define A_INVIS		NCURSES_BITS(1U,15)
#define A_PROTECT	NCURSES_BITS(1U,16)
#define A_HORIZONTAL	NCURSES_BITS(1U,17)
#define A_LEFT		NCURSES_BITS(1U,18)
#define A_LOW		NCURSES_BITS(1U,19)
#define A_RIGHT		NCURSES_BITS(1U,20)
#define A_TOP		NCURSES_BITS(1U,21)
#define A_VERTICAL	NCURSES_BITS(1U,22)

#if 1
#define A_ITALIC	NCURSES_BITS(1U,23)	/* ncurses extension */
#endif


;; X/Open attributes
(defconstant +WA_ATTRIBUTES+ +A_ATTRIBUTES+)
(defconstant +WA_NORMAL+ +A_NORMAL+)
(defconstant +WA_STANDOUT+ +A_STANDOUT+)
(defconstant +WA_UNDERLINE+ +A_UNDERLINE+)
(defconstant +WA_REVERSE+ +A_REVERSE+)
(defconstant +WA_BLINK+	+A_BLINK+)
(defconstant +WA_DIM+ +A_DIM+)
(defconstant +WA_BOLD+ +A_BOLD+)
(defconstant +WA_ALTCHARSET+ +A_ALTCHARSET+)
(defconstant +WA_INVIS+ +A_INVIS+)
(defconstant +WA_PROTECT+ +A_PROTECT+)
(defconstant +WA_HORIZONTAL+ +A_HORIZONTAL+)
(defconstant +WA_LEFT+ +A_LEFT+)
(defconstant +WA_LOW+ +A_LOW+)
(defconstant +WA_RIGHT+	+A_RIGHT+)
(defconstant +WA_TOP+ +A_TOP+)
(defconstant +WA_VERTICAL+ +A_VERTICAL+)

(in-package #:binding)

#|
int use_default_colors(void);
int assume_default_colors(int fg, int bg);
|#

(defcfun "use_default_colors" :int)
(defcfun "assume_default_colors" :int (fg :int) (bg :int))

(defconstant +COLOR_BLACK+ 0)
(defconstant +COLOR_RED+ 1)
(defconstant +COLOR_GREEN+ 2)
(defconstant +COLOR_YELLOW+ 3)
(defconstant +COLOR_BLUE+ 4)
(defconstant +COLOR_MAGEN+ 5)
(defconstant +COLOR_CYAN+ 6)
(defconstant +COLOR_WHITE+ 7)
(in-package #:binding)

#|
int define_key(const char *definition, int keycode);
|#

(defcfun "define_key" :int (definition :string) (keycode :int))
(in-package #:binding)

#|
int delch(void);
int wdelch(WINDOW *win);
int mvdelch(int y, int x);
int mvwdelch(WINDOW *win, int y, int x);
|#

(defcfun "delch" :int)
(defcfun "wdelch" :int (win window))
(defcfun "mvdelch" :int (y :int) (x :int))
(defcfun "mvwdelch" :int (win window) (y :int) (x :int))
(in-package #:binding)

#|
int deleteln(void);
int wdeleteln(WINDOW *win);
int insdelln(int n);
int winsdelln(WINDOW *win, int n);
int insertln(void);
int winsertln(WINDOW *win);
|#

(defcfun "deleteln" :int)

(defcfun "wdeleteln" :int
  (win window))

(defcfun "insdelln" :int
  (n :int))

(defcfun "winsdelln" :int
  (win window)
  (n :int))

(defcfun "insertln" :int)

(defcfun "winsertln" :int (win window))
(in-package #:binding)

#|
const char * curses_version(void);
int use_extended_names(bool enable);
|#

(defcfun "curses_version" :string)

(defcfun "use_extended_names" :int
  (enable :boolean))
(in-package #:binding)

#|

int getcchar(const cchar_t *wcval, wchar_t *wch, attr_t *attrs, short *color_pair, void *opts );

int setcchar(cchar_t *wcval, const wchar_t *wch, const attr_t attrs, short color_pair, const void *opts );
|#

;; TODO
(in-package #:binding)

#|
int getch(void);
int wgetch(WINDOW *win);
int mvgetch(int y, int x);
int mvwgetch(WINDOW *win, int y, int x);
int ungetch(int ch);
int has_key(int ch);
|#

(defcfun "getch" :int)

(defcfun "wgetch" :int
  (win window))

(defcfun "mvgetch" :int
  (y :int)
  (x :int))

(defcfun "mvwgetch" :int
  (win window)
  (y :int)
  (x :int))

(defcfun "ungetch" :int
  (ch :int))

(defcfun "has_key" :int
  (ch :int))
(in-package #:binding)

#|
int getstr(char *str);
int getnstr(char *str, int n);
int wgetstr(WINDOW *win, char *str);
int wgetnstr(WINDOW *win, char *str, int n);
int mvgetstr(int y, int x, char *str);
int mvwgetstr(WINDOW *win, int y, int x, char *str);
int mvgetnstr(int y, int x, char *str, int n);
int mvwgetnstr(WINDOW *, int y, int x, char *str, int n);
|#

(defcfun "getstr" :int
  (str :string))

(defcfun "getnstr" :int
  (str :string)
  (n :int))

(defcfun "wgetstr" :int
  (win window)
  (str :string))

(defcfun "wgetnstr" :int
  (win window)
  (str :string)
  (n :int))

(defcfun "mvgetstr" :int
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvwgetstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvgetnstr" :int
  (y :int)
  (x :int)
  (str :string)
  (n :int))

(defcfun "mvwgetnstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string)
  (n :int))
(in-package #:binding)

#|
int get_wch(wint_t *wch);
int wget_wch(WINDOW *win, wint_t *wch);
int mvget_wch(int y, int x, wint_t *wch);
int mvwget_wch(WINDOW *win, int y, int x, wint_t *wch);
int unget_wch(const wchar_t wch);
|#

;; TODO
(in-package #:binding)

#|
int get_wstr(wint_t *wstr);
int getn_wstr(wint_t *wstr, int n);
int wget_wstr(WINDOW *win, wint_t *wstr);
int wgetn_wstr(WINDOW *win, wint_t *wstr, int n);
int mvget_wstr(int y, int x, wint_t *wstr);
int mvgetn_wstr(int y, int x, wint_t *wstr, int n);
int mvwget_wstr(WINDOW *win, int y, int x, wint_t *wstr);
int mvwgetn_wstr(WINDOW *win, int y, int x, wint_t *wstr, int n);
|#

;; TODO
(in-package #:binding)

#|
void getyx(WINDOW *win, int y, int x);
void getparyx(WINDOW *win, int y, int x);
void getbegyx(WINDOW *win, int y, int x);
void getmaxyx(WINDOW *win, int y, int x);
|#

(defcfun "getyx" :void
  (win window)
  (y :int)
  (x :int))

(defcfun "getparyx" :void
  (win window)
  (y :int)
  (x :int))

(defcfun "getbegyx" :void
  (win window)
  (y :int)
  (x :int))

(defcfun "getmaxyx" :void
  (win window)
  (y :int)
  (x :int))
(in-package #:binding)

(include "ncurses.h")

(ctype chtype "chtype")
(ctype mmask_t "mmask_t")
(ctype wchar_t "wchar_t")
(ctype bool "bool") 
(ctype chtype "chtype")
(ctype attr_t "attr_t")


(constant (+NCURSES_VERSION_MAJOR+ "NCURSES_VERSION_MAJOR"))
(constant (+NCURSES_VERSION_MINOR+ "NCURSES_VERSION_MINOR"))
(constant (+NCURSES_VERSION_VERSION_PATCH+ "NCURSES_VERSION_PATCH"))
(in-package #:binding)

#|
chtype inch(void);
chtype winch(WINDOW *win);
chtype mvinch(int y, int x);
chtype mvwinch(WINDOW *win, int y, int x);
|#

(defcfun "inch" chtype)

(defcfun "winch" chtype
  (win window))

(defcfun "mvinch" chtype
  (y :int)
  (x :int))

(defcfun "mvwinch" chtype
  (win window)
  (y :int)
  (x :int))

(in-package #:binding)

#|
int inchstr(chtype *chstr);
int inchnstr(chtype *chstr, int n);
int winchstr(WINDOW *win, chtype *chstr);
int winchnstr(WINDOW *win, chtype *chstr, int n);
int mvinchstr(int y, int x, chtype *chstr);
int mvinchnstr(int y, int x, chtype *chstr, int n);
int mvwinchstr(WINDOW *win, int y, int x, chtype *chstr);
int mvwinchnstr(WINDOW *win, int y, int x, chtype *chstr, int n);
|#

;; TODO
(in-package #:binding)

#|
WINDOW *initscr(void);
int endwin(void);
bool isendwin(void);
SCREEN *newterm(const char *type, FILE *outfd, FILE *infd);
SCREEN *set_term(SCREEN *new);
void delscreen(SCREEN* sp);
|#

(defcfun "initscr" window)

(defcfun "endwin" :int)

(defcfun "isendwin" :bool)

(defcfun "newterm" screen
  (type :string)
  (outfd file)
  (infd file))

(defcfun "set_term" screen
  (new screen))

(defcfun "delscreen" :void
  (sp screen))
(in-package #:binding)

#|
int cbreak(void);
int nocbreak(void);
int echo(void);
int noecho(void);
int halfdelay(int tenths);
int intrflush(WINDOW *win, bool bf);
int keypad(WINDOW *win, bool bf);
int meta(WINDOW *win, bool bf);
int nodelay(WINDOW *win, bool bf);
int raw(void);
int noraw(void);
void noqiflush(void);
void qiflush(void);
int notimeout(WINDOW *win, bool bf);
void timeout(int delay);
void wtimeout(WINDOW *win, int delay);
int typeahead(int fd);
|#

(defcfun "cbreak" :int)

(defcfun "nocbreak" :int)

(defcfun "echo" :int)

(defcfun "noecho" :int)

(defcfun "halfdelay" :int
  (tenths :int))

(defcfun "intrflush" :int
  (win window)
  (bf :boolean))

(defcfun "keypad" :int
  (win window)
  (bf :boolean))

(defcfun "meta" :int
  (win window)
  (bf :boolean))

(defcfun "nodelay" :int
  (win window)
  (bf :boolean))

(defcfun "raw" :int)

(defcfun "noraw" :int)

(defcfun "noqiflush" :void)

(defcfun "qiflush" :void)

(defcfun "notimeout" :int
  (win window)
  (bf :boolean))

(defcfun "timeout" :void
  (delay :int))

(defcfun "wtimeout" :void
  (win window)
  (delay :int))

(defcfun "typeahead" :int
  (fd :int))
(in-package #:binding)

#|
int insch(chtype ch);
int winsch(WINDOW *win, chtype ch);
int mvinsch(int y, int x, chtype ch);
int mvwinsch(WINDOW *win, int y, int x, chtype ch);
|#

(defcfun "insch" :int
  (ch chtype))

(defcfun "winsch" :int
  (win window)
  (ch chtype))

(defcfun "mvinsch" :int
  (y :int)
  (x :int)
  (ch chtype))

(defcfun "mvwinsch" :int
  (win window)
  (y :int)
  (x :int)
  (ch chtype))
(in-package #:binding)

#|
int insstr(const char *str);
int insnstr(const char *str, int n);
int winsstr(WINDOW *win, const char *str);
int winsnstr(WINDOW *win, const char *str, int n);
int mvinsstr(int y, int x, const char *str);
int mvinsnstr(int y, int x, const char *str, int n);
int mvwinsstr(WINDOW *win, int y, int x, const char *str);
int mvwinsnstr(WINDOW *win, int y, int x, const char *str, int n);
|#


(defcfun "insstr" :int
  (str :string))

(defcfun "insnstr" :int
  (str :string)
  (n :int))

(defcfun "winsstr" :int
  (win window)
  (str :string))

(defcfun "winsnstr" :int
  (win window)
  (str :string)
  (n :int))

(defcfun "mvinsstr" :int
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvinsnstr" :int
  (y :int)
  (x :int)
  (str :string)
  (n :int))

(defcfun "mvwinsstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvwinsnstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string)
  (n :int))
(in-package #:binding)

#|
int instr(char *str);
int innstr(char *str, int n);
int winstr(WINDOW *win, char *str);
int winnstr(WINDOW *win, char *str, int n);
int mvinstr(int y, int x, char *str);
int mvinnstr(int y, int x, char *str, int n);
int mvwinstr(WINDOW *win, int y, int x, char *str);
int mvwinnstr(WINDOW *win, int y, int x, char *str, int n);
|#

(defcfun "instr" :int
  (str :string))

(defcfun "innstr" :int
  (str :string)
  (n :int))

(defcfun "winstr" :int
  (win window)
  (str :string))

(defcfun "winnstr" :int
  (win window)
  (str :string)
  (n :int))

(defcfun "mvinstr" :int
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvinnstr" :int
  (y :int)
  (x :int)
  (str :string)
  (n :int))

(defcfun "mvwinstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string))

(defcfun "mvwinnstr" :int
  (win window)
  (y :int)
  (x :int)
  (str :string)
  (n :int))
(in-package #:binding)

#|
int ins_wch(const cchar_t *wch);
int wins_wch(WINDOW *win, const cchar_t *wch);
int mvins_wch(int y, int x, const cchar_t *wch);
int mvwins_wch(WINDOW *win, int y, int x, const cchar_t *wch);
|#

;; TODO
(in-package #:binding)

#|

|#
(in-package #:binding)

#|
int in_wch(cchar_t *wcval);
int mvin_wch(int y, int x, cchar_t *wcval);
int mvwin_wch(WINDOW *win, int y, int x, cchar_t *wcval);
int win_wch(WINDOW *win, cchar_t *wcval);
|#

(defcfun "in_wch" :int
  (wcval :pointer (:struct cchar_t)))

(defcfun "mvin_wch" :int
  (y :int)
  (x :int)
  (wcval :pointer (:struct cchar_t)))

(defcfun "mvwin_wch" :int
  (win window)
  (y :int)
  (x :int)
  (wcval :pointer (:struct cchar_t)))

(defcfun "win_wch" :int
  (win window)
  (wcval :pointer (:struct cchar_t)))
(in-package #:binding)

#|
int ins_wstr(const wchar_t *wstr);
int ins_nwstr(const wchar_t *wstr, int n);
int wins_wstr(WINDOW *win, const wchar_t *wstr);
int wins_nwstr(WINDOW *win, const wchar_t *wstr, int n);
int mvins_wstr(int y, int x, const wchar_t *wstr);
int mvins_nwstr(int y, int x, const wchar_t *wstr, int n);
int mvwins_wstr(WINDOW *win, int y, int x, const wchar_t *wstr);
int mvwins_nwstr(WINDOW *win, int y, int x, const wchar_t *wstr, int n);
|#

;; TODO
(in-package #:binding)
